Fixed an issue where the ropes were handling offsets in a relative rather than absolute manner.

--- a/data/objects/effects/prop-controllers/rope_angled_controller.cfg
+++ b/data/objects/effects/prop-controllers/rope_angled_controller.cfg
@@ -8,7 +8,10 @@ zorder: "@include data/zorder.cfg:exterior_decor",
 properties: {
 	length: "decimal :: lib.math.length(x_1,y_1,x_2,y_2)",
 	set_ends: "def(decimal new_x1, decimal new_y1, decimal new_x2, decimal new_y2) -> commands [set(x_1,new_x1),set(y_1,new_y1),set(x_2,new_x2),set(y_2,new_y2),fire_event(me,'create'),]",
-	set_offset: "def(decimal pixels) -> commands execute(me, [set(draw_area, [0, pixels, img_w/2, length/2]), set(offset,(offset+pixels)%img_w)])",
+	set_offset: "def(decimal pixels) -> commands execute(me, [
+		set(draw_area, [0, pixels, img_w/2, length/2]),
+		set(offset, mod(pixels, img_w))
+	])",
 
 	set_ends_and_offset: "def(decimal new_x1, decimal new_y1, decimal new_x2, decimal new_y2, decimal pixels) -> commands
 	  [
@@ -23,7 +26,7 @@ properties: {
 	   set(self.activation_area, [min(new_x1,new_x2) - 200, min(new_y1,new_y2) - 200, abs(new_x1 - new_x2) + 200, abs(new_y1 - new_y2) + 200]),
 	   set(self.rotate, (angle(new_x1, new_y1, new_x2, new_y2) - 90))
 	  ] where len = lib.math.length(new_x1, new_y1, new_x2, new_y2),
-	          offset = (self.offset+pixels)%self.img_w",
+	          offset = mod(pixels, self.img_w)",
 	
 #-------------------------- vars --------------------------#
 	x_1: { type: "decimal", editor_info: { type: "x", value: "x - 100" }, default: 0  },
