--- a/data/objects/props-interactive/platforms/platform_swaying.cfg
+++ b/data/objects/props-interactive/platforms/platform_swaying.cfg
@@ -22,7 +22,7 @@ properties: {
 			set(right_pulley.rotate, polarity*(sin(progress)+1)/2*180*15),
 			
 			
-			top_rope.set_ends_and_offset(point1[0], point1[1]-topRopeH, point2[0], point2[1]-topRopeH, lib.math.length(point1[0], point1[1],to[0],to[1])/2),
+			top_rope.set_ends_and_offset(point1[0], point1[1]-topRopeH, point2[0], point2[1]-topRopeH, lib.math.length(point1[0], point1[1],to[0],to[1])/2 ),
 			left_rope.set_ends_and_offset(to[0], to[1], point1[0], point1[1]-sagOffset, 0),
 			right_rope.set_ends_and_offset(to[0], to[1], point2[0], point2[1]-sagOffset, 0),
 			]",
@@ -98,12 +98,17 @@ on_done_create: "set(actual_speed, top_speed*50/lib.math.length(point1, point2))
 
 on_process: "[
 	add(progress, actual_speed*(1-(stopped))),
+
+	/*
+		`list_tween` takes two lists and a %, and returns the value % of the way between every pair of indices between the two lists.
+	
+		So what's going on here, is that we're using list_tween to determine the 'how far' position between the two endpoints (mostly X, but there is some Y, moreso with more tilt), and then to make the rope sag, we're using zip to compose this with a function that only displaces the rope along Y - and this function is wrapped in a sqrt to make it flush at the ends, and sag only in the middle.
+	*/
 	if(_last_progress = null or progress != _last_progress or cycle = 1,
 		setPos(newPos) where newPos = zip(list_tween(point1, point2, (sin(progress)+1)/2), [0, 0], a+b))
 	]",
 
-# list_tween takes two lists and a %, and returns the value % of the way between every pair of indices between the two lists.
-#   So what's going on here, is that we're using list_tween to determine the "how far" position between the two endpoints (mostly X, but there is some Y, moreso with more tilt), and then to make the rope sag, we're using zip to compose this with a function that only displaces the rope along Y - and this function is wrapped in a sqrt to make it flush at the ends, and sag only in the middle.
+
 on_button_pressed: "go",
 on_button_released: "stop",
 editor_info: {
@@ -153,8 +158,11 @@ object_type: [
 			basketWobble: "sin(cycle*8)*bwmag*0.55",
 			_parentSpeed: "(1.0 - int(lib.standardize.decimal(_parent.stopped)))",
 
-			#if the platform is has a very short horizontal path, it looks goofy to have it's sway not shrink proportionally. However, anything more than the 'normal' sway at a width of about 400 would also be bad, so we cap it above that value, and shrink it below it.
-			#we're also making this dependent on the rope's length - shorter ropes need to sway less.
+			/*
+				If the platform is has a very short horizontal path, it looks goofy to have its 'sway' not shrink proportionally. However, anything more than the 'normal' sway at a width of about 400 would also be bad, so we cap it above that value, and shrink it below it.
+			
+				We're also making this dependent on the rope's length - shorter ropes need to sway less.
+			*/
 			sway_dampener: "max(1.0,abs(_parent.point1[0] - _parent.point2[0])/800.0)*min(1.0,_parent.rope_height/128.0)",
 
 			#the horizontal offset in pixels, from hanging directly downward.
@@ -172,7 +180,9 @@ object_type: [
 			decayBasketWobble: "set(bwmag, max(6.0,decimal(bwmag)*(0.99/1)))",
 			setInertia: "schedule(2,set(inertia, 50*(sin(_parent.progress- if(_parent.is_zipline, -180, 180) *_parent.polarity))))",
 
-			# if this is a zipline, we want the sway from inertia to kick in at a slightly different phase.  It looks weird if it kicks in as soon in a cycle as it does for a regular platform.
+			/*
+				If this is a zipline, we want the sway from inertia to kick in at a slightly different phase.  It looks weird if it kicks in as soon in a cycle as it does for a regular platform.
+			*/
 			player_is_standing_on_us: "bool :: (level.player.standing_on = basket)",
 			not_in_zipline_bottomOut: "bool :: (mod(_parent.progress-90,360) < 150 or mod(_parent.progress-90,360) > 210)",
 			not_in_zipline_topOut: "bool :: (mod(_parent.progress-90,360) > 50 and mod(_parent.progress-90,360) < 300)",
