Doing a thing where we (carefully) elide ops that would set state on particle systems if the legacy particle attache hasn't actually run its constructor.  Apparently when loading from a save, we're not doing that unless the object is actually on-screen.

--- a/data/objects/effects/attaches/legacy_particle_attache.cfg
+++ b/data/objects/effects/attaches/legacy_particle_attache.cfg
@@ -49,25 +49,44 @@ types: {
 
 properties: {
 #-------------------------- effects_attache overrides --------------------------#
-	do_setup: "[
+	/*
+		We have a pretty shitty deal here where, upon loading from a save, in particular, most of these objects won't get constructed until their object actually ACTIVATES; not when it's actually created.  This may be a limitation of our available constructors from the engine;  I believe we have `on_start_level` as a level-wide broadcast that executes regardless of whether an object is active (in constrast with `on_create` which occurs only when first activated).   We don't have an equivalent for loading from saves, however, limiting us to only running constructors when first activated.   I believe the decision about how this worked was made during an era when everything in our objects was serializable 'no matter what', and in the intervening years since then, we've added several data types that aren't serializable, so objects need to be able to reconstruct themselves after loading from a save.
+		
+		This combines in a nasty way with how our particle system code works, where `particle_systems[name].whatever` is null until someone runs `add_particles(name)`.  One particular bad example of this lay in our `save_statue` objects, which would broadcast a signal to all other statues to turn themselves off; this would fail if said statues hadn't initialized yet.
+		
+		We may need to consider adding such an event to the engine; in the meantime we're putting a guard statement in here to block actions if we're trying to run them on an object that hasn't constructed yet.  If we run into situations where objects are mysteriously 'missing particles' after loading from a save, this may well be the culprit.
+	*/
+
+
+	assert_wrap: "def(commands do_stuff) -> commands execute(me,
+		do_stuff
+	) asserting size(particle_systems) > 0 | q(Looks like we had another instance of that bug where something tries to use a legacy particle attache without setting it up (critically, without spawning its particles).  The root object that spawned this is ${me.root_parent_object.type}.)",
+	
+	do_if_safe: "def(commands do_stuff) -> commands execute(me,
+		if(me._constructed, do_stuff)
+	)",
+	
+	
+#-------------------------- effects_attache overrides --------------------------#
+	do_setup: "execute(me, [
 					initialize_position,
 					map(particle_names, add_particles(value)),
-				]",
+				])",
 
-	turn_on: "commands ::	execute(me, [
+	turn_on: "commands ::	do_if_safe([
 								map(natural_spawn_rates, set(particle_systems[ value.name ].spawn_rate, value.rate)),
 								apply_customizations_for_individual_usage,
 								set(last_toggled_on, level.cycle),
-							]) asserting size(particle_systems) > 0 | q(Looks like we had another instance of that bug where something tries to use a legacy particle attache without setting it up (critically, without spawning its particles).  The root object that spawned this is ${me.root_parent_object.type}.)",
+							])",
 
-	turn_off: "commands ::	execute(me, [
+	turn_off: "commands ::	do_if_safe([
 								map(natural_spawn_rates, set(particle_systems[ value.name ].spawn_rate, 0)),
 								set(last_toggled_off, level.cycle),
 							])",
 
 
 
-	handle_specialized_processing: "execute(me, if(cycle > 1, customized_processing))",
+	handle_specialized_processing: "do_if_safe( customized_processing )",
 
 #-------------------------- storage --------------------------#
 	particle_names: { type: "[string]", default: [] },
