--- a/data/objects/props-interactive/misc/save_statue.cfg
+++ b/data/objects/props-interactive/misc/save_statue.cfg
@@ -68,9 +68,13 @@ properties: {
 				]",
 
 	is_player_within_bounds:  "bool :: (level.player.mid_x > _x_bound and level.player.mid_x <_x2_bound and level.player.mid_y > _y_bound and level.player.mid_y < _y2_bound and level.player.hitpoints > 0)",
+	
 	has_not_triggered_recently: "bool :: (cycle - _last_triggered > 100)",
 
-	player_is_near_statue: "def(obj save_statue the_statue, int dist) -> bool lib.math.length(level.player,the_statue) < dist", //somewhat non-obvious; we use the rectangular area (assumed to be really close and tight, and to cover e.g. vertical passageways completely) to handle triggering the save.  However, to handle "making it possible to re-trigger this save point", we use a much wider, much more greedy circular radius.  Essentially all this is for is to prevent spamming the "game has been saved" message over and over if the player stands/walks near a save point.
+	/*
+		Somewhat non-obvious; we use the rectangular area (assumed to be really close and tight, and to cover e.g. vertical passageways completely) to handle triggering the save.  However, to handle "making it possible to re-trigger this save point", we use a much wider, much more greedy circular radius.  Essentially all this is for is to prevent spamming the "game has been saved" message over and over if the player stands/walks near a save point.
+	*/
+	player_is_near_statue: "def(obj save_statue the_statue, int dist) -> bool lib.math.length(level.player,the_statue) < dist",
 	
 #-------------------------- visual fx --------------------------#
 	_particles: {
