Enhancing the knockback system to use both X and Y.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -64,6 +64,7 @@ properties: {
 	posthit_invicibility_period: "int :: 0",
 	damage_cooldown: "int :: 0",
 	knockback_cooldown: "int :: 0",
+	fraction_by_which_knockback_sources_itself_from_direction_of_impact_versus_momentum_of_aggressor: "decimal :: 0.0",  //normalized; at 0.0 it's entirely direction, at 1.0, purely the direction the aggressor/hitter is moving in.
 	sourceless_damage_cooldown: "int :: 20",
 
 	
@@ -519,7 +520,23 @@ properties: {
 
 	maybe_output_damage_debug_info: "def(decimal _dmg, string source) -> commands if(should_debug_output_damage_values, debug('cycle:' + level.cycle + ' ' + me.type + ':'+ addr(me) + ':  ' +  me.hitpoints + 'hp - ' + _dmg + 'dmg, which came from ' + source))",
 
-	handle_knockback: "def(obj hittable collide_with) -> commands execute(me,add(velocity_x, behind_or_in_front * collide_with.attack_knockback) where behind_or_in_front = sign(me.mid_x - collide_with.mid_x) )",
+//	handle_knockback: "def(obj hittable collide_with) -> commands execute(me,add(velocity_x, behind_or_in_front * collide_with.attack_knockback) where behind_or_in_front = sign(me.mid_x - collide_with.mid_x) )",
+
+	handle_knockback: "def(obj hittable collide_with) -> commands execute(me, [
+		add(me.velocity_x, knockback_according_to_direction_of_impact.x),
+		add(me.velocity_y, knockback_according_to_direction_of_impact.y),
+		
+	]	where knockback_according_to_direction_of_impact = {
+		x: cos(angle) * collide_with.attack_knockback,
+		y: sin(angle) * collide_with.attack_knockback
+	}
+	
+		where angle = lib.math.angle(collide_with, me)
+	)",
+
+		
+	 
+//fraction_by_which_knockback_sources_itself_from_direction_of_impact_versus_momentum_of_aggressor
 
 	custom_damage_table: "{DamageType -> decimal} | null ::
 							null",
