Enhanced the knockback to allow the possibility of being totally dependent on the motion of the thing hitting the player, rather than vice-versa.  Tweaked the values for the moth boss rocks.

--- a/data/objects/effects/puffs/rock_flying_harmful.cfg
+++ b/data/objects/effects/puffs/rock_flying_harmful.cfg
@@ -13,9 +13,10 @@ properties: {
 	damage_type: "enum impact",
 	goes_through_enemy_shots: true,
 	damage_cooldown: "60",
-	knockback_cooldown: "1000",
+	knockback_cooldown: "50",
+	fraction_by_which_knockback_sources_itself_from_direction_of_impact_versus_momentum_of_aggressor: "1.0",
 
-	attack_knockback: "int :: 400",
+	attack_knockback: "int :: 1600",
 
 
 
