--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -64,7 +64,7 @@ properties: {
 	posthit_invicibility_period: "int :: 0",
 	damage_cooldown: "int :: 0",
 	knockback_cooldown: "int :: 0",
-	fraction_by_which_knockback_sources_itself_from_direction_of_impact_versus_momentum_of_aggressor: "decimal :: 0.0",  //normalized; at 0.0 it's entirely direction, at 1.0, purely the direction the aggressor/hitter is moving in.
+	fraction_by_which_knockback_sources_itself_from_direction_of_impact_versus_momentum_of_aggressor: "decimal :: 0.0",  //normalized; at 0.0 it's entirely direction, at 1.0, purely the direction the aggressor/hitter is moving in.  Note also that it's a rather bad idea to set this to a high value on objects with a solid area - you'll run into their 'back' as they move away from you, and get stuck to it.
 	sourceless_damage_cooldown: "int :: 20",
 
 	
@@ -520,23 +520,40 @@ properties: {
 
 	maybe_output_damage_debug_info: "def(decimal _dmg, string source) -> commands if(should_debug_output_damage_values, debug('cycle:' + level.cycle + ' ' + me.type + ':'+ addr(me) + ':  ' +  me.hitpoints + 'hp - ' + _dmg + 'dmg, which came from ' + source))",
 
+
 //	handle_knockback: "def(obj hittable collide_with) -> commands execute(me,add(velocity_x, behind_or_in_front * collide_with.attack_knockback) where behind_or_in_front = sign(me.mid_x - collide_with.mid_x) )",
 
+
 	handle_knockback: "def(obj hittable collide_with) -> commands execute(me, [
-		add(me.velocity_x, knockback_according_to_direction_of_impact.x),
-		add(me.velocity_y, knockback_according_to_direction_of_impact.y),
+		//debug(me.type, collide_with.type),
+		add(me.velocity_x, dump(mix(
+			knockback_according_to_direction_of_impact.x,
+			knockback_according_to_momentum_of_aggressor.x,
+			style_fraction
+		))),
+		add(me.velocity_y, mix(
+			knockback_according_to_direction_of_impact.y,
+			knockback_according_to_momentum_of_aggressor.y,
+			style_fraction
+		)),
 		
 	]	where knockback_according_to_direction_of_impact = {
 		x: cos(angle) * collide_with.attack_knockback,
 		y: sin(angle) * collide_with.attack_knockback
 	}
 	
+		where knockback_according_to_momentum_of_aggressor = {
+		x: cos(aggressor_angle_of_motion) * collide_with.attack_knockback,
+		y: sin(aggressor_angle_of_motion) * collide_with.attack_knockback
+	}
+	
+		where aggressor_angle_of_motion = atan2( collide_with.velocity_y, collide_with.velocity_x ) 
 		where angle = lib.math.angle(collide_with, me)
+		where style_fraction = collide_with.fraction_by_which_knockback_sources_itself_from_direction_of_impact_versus_momentum_of_aggressor
 	)",
 
 		
 	 
-//fraction_by_which_knockback_sources_itself_from_direction_of_impact_versus_momentum_of_aggressor
 
 	custom_damage_table: "{DamageType -> decimal} | null ::
 							null",
