--- a/data/objects/props-interactive/obstacles/gate.cfg
+++ b/data/objects/props-interactive/obstacles/gate.cfg
@@ -26,7 +26,7 @@ properties: {
 	//check the cycle to avoid contention with a lock that's about to kill itself
 	is_locked: "bool :: (bool(locks) and level.cycle > 0) or (not event_status)",
 	
-	portcullis: { type: "obj gate.portcullis", init: "object('gate.portcullis', img_mid_x, img_mid_y, {facing:facing, desired_y: y-120, desired_y2: y, origin_y: y, clip_area_absolute: true, clip_area: [x+0,y+18,me.img_w,me.img_h]})" },
+	portcullis: { type: "obj gate.portcullis", init: "object('gate.portcullis', img_mid_x, img_mid_y, {facing:facing, origin_y: y, clip_area_absolute: true, clip_area: [x+0,y+18,me.img_w,me.img_h]})" },
 
 	overlay: { type: "obj gate.overlay", init: "object('gate.overlay', img_mid_x,img_mid_y,facing)" },
 	
@@ -77,7 +77,7 @@ on_process: "
 					if(animation = 'unlocked',
 						[
 							set(animation, 'closing'),
-						//	fire_event( portcullis,'lock'),
+							fire_event( portcullis,'lock'),
 						//	schedule(10,sound('gate-close.ogg')),
 						],
 						set(animation, 'locked')
@@ -85,7 +85,7 @@ on_process: "
 					if(animation = 'locked',
 						[
 							set(animation, 'opening'),
-						//	fire_event( portcullis,'unlock'),
+							fire_event( portcullis,'unlock'),
 						//	sound('gate-open.ogg'),
 						],
 						set(animation, 'unlocked')
@@ -149,39 +149,51 @@ object_type: [
 		has_feet: false,
 		always_active: true,
 		adjust_feet_on_animation_change: false,
-		timer_frequency: 5,
 		
 		properties: {
 			set_at_open_pos: "def() -> commands [
 				animation('normal'),
-				set(gate_vel,2),
 				set(y,origin_y-120),
 			]",
 			
 			set_at_closed_pos: "def() -> commands [
 				animation('normal'),
-				set(gate_vel,2),
 				set(y,origin_y),
 			]",
 			
 			origin_y: { type: "int", default: 2 },
-			desired_y: { type: "int", default: 9 },
-			desired_y2: { type: "int", default: 67 },
+
 			is_locked: { type: "bool", default: false },
-			gate_vel: { type: "int", default: 2 },
 			immediately_set_pos: "if(is_locked, set_at_closed_pos(),set_at_open_pos())",
 		},
 		
-		on_lock: "[set(me.is_locked,true), animation('moving')]",
-		on_unlock: "[set(me.is_locked,false), animation('moving')]",
-		on_process_moving: "[
-				if(is_locked,
-					if(y < desired_y2,
-						[set(y, y+(1+gate_vel)),set(gate_vel, gate_vel+1)],
-						set_at_closed_pos()  ),
-					if(y > desired_y,
-						[set(y, y-(1+gate_vel)),set(gate_vel, gate_vel+1)],
-						set_at_open_pos() ))]",
+		on_lock: "[
+			set(me.is_locked,true),
+			animate(me,
+				{
+					y: origin_y
+				},
+				{
+					duration: 20,
+					easing: lib.math.ease_out_sine,
+					on_complete: [],
+				}
+			),
+		]",
+		on_unlock: "[
+			set(me.is_locked,false),
+			animate(me,
+				{
+					y: origin_y - 120
+				},
+				{
+					duration: 20,
+					easing: lib.math.ease_out_sine,
+					on_complete: [],
+				}
+			),
+		]",
+
 		on_end_normal_anim: "animation('normal')",
 		
 		animation: [
@@ -193,16 +205,7 @@ object_type: [
 				frames: 1,
 				duration: 200,
 				palettes: "@include data/palettes.cfg:dungeon_palettes",
-			},
-			{
-				image: "props/gate.png",
-				pad: 3,
-				id: "moving",
-				rect: [84,2,121,104],
-				frames: 1,
-				duration: 200,
-				palettes: "@include data/palettes.cfg:dungeon_palettes",
-			},
+			}
 		],
 	},
 ],
