Fixed the gates not having sounds, and gave them better easing functions.

--- a/data/objects/props-interactive/obstacles/gate.cfg
+++ b/data/objects/props-interactive/obstacles/gate.cfg
@@ -78,7 +78,6 @@ on_process: "
 						[
 							set(animation, 'closing'),
 							fire_event( portcullis,'lock'),
-						//	schedule(10,sound('gate-close.ogg')),
 						],
 						set(animation, 'locked')
 					),
@@ -86,7 +85,6 @@ on_process: "
 						[
 							set(animation, 'opening'),
 							fire_event( portcullis,'unlock'),
-						//	sound('gate-open.ogg'),
 						],
 						set(animation, 'unlocked')
 					)
@@ -149,6 +147,7 @@ object_type: [
 		has_feet: false,
 		always_active: true,
 		adjust_feet_on_animation_change: false,
+		prototype: ["standard_values"],
 		
 		properties: {
 			set_at_open_pos: "def() -> commands [
@@ -169,26 +168,28 @@ object_type: [
 		
 		on_lock: "[
 			set(me.is_locked,true),
+			schedule(10, play_sound__falloff('gate-close.ogg')),
 			animate(me,
 				{
 					y: origin_y
 				},
 				{
 					duration: 20,
-					easing: lib.math.ease_out_sine,
+					easing: lib.math.ease_out_bounce,
 					on_complete: [],
 				}
 			),
 		]",
 		on_unlock: "[
 			set(me.is_locked,false),
+			play_sound__falloff('gate-open.ogg'),
 			animate(me,
 				{
 					y: origin_y - 120
 				},
 				{
-					duration: 20,
-					easing: lib.math.ease_out_sine,
+					duration: 30,
+					easing: lib.math.ease_out_back,
 					on_complete: [],
 				}
 			),
