Fixed a bunch of sounds that weren't being piped through the new sound subsystem.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -526,11 +526,11 @@ properties: {
 
 	handle_knockback: "def(obj hittable collide_with) -> commands execute(me, [
 		//debug(me.type, collide_with.type),
-		add(me.velocity_x, dump(mix(
+		add(me.velocity_x, mix(
 			knockback_according_to_direction_of_impact.x,
 			knockback_according_to_momentum_of_aggressor.x,
 			style_fraction
-		))),
+		)),
 		add(me.velocity_y, mix(
 			knockback_according_to_direction_of_impact.y,
 			knockback_according_to_momentum_of_aggressor.y,
