--- a/data/object_prototypes/enemies_specialized/maggot.cfg
+++ b/data/object_prototypes/enemies_specialized/maggot.cfg
@@ -38,7 +38,7 @@ on_end_wiggle_anim: "	[
 								set(animation, 'fall'),
 								set(animation, 'wiggle')
 							),
-							sound('maggot-wiggle.wav')
+							play_sound__falloff('maggot-wiggle.wav')
 						]",
 
 on_end_land_anim: "set(animation, 'stand')",
@@ -51,7 +51,7 @@ on_collide_feet: "	if(animation = 'fall' and
 							true
 						),
 						[
-							sound('maggot-land.wav'),
+							play_sound__falloff('maggot-land.wav'),
 							set(animation, 'land')
 						],
 						proto_event('ant', 'collide_feet')
@@ -62,8 +62,8 @@ on_bounced_on: "me.force_death()",
 on_solidity_fail: "me.force_death()",
 
 #-------------------------- cosmetics --------------------------#
-on_scrunch:"sound('maggot-scrunch'+1d5+'.wav', volume) where volume = lib.math.constrain(0, 200.0/lib.math.length(self, level.player),1.0)",
-on_stretch:"sound('maggot-stretch'+1d7+'.wav', volume) where volume = lib.math.constrain(0, 200.0/lib.math.length(self, level.player),1.0)",
+on_scrunch:"play_sound__falloff('maggot-scrunch', {max_volume: volume}) where volume = lib.math.constrain(0, 200.0/lib.math.length(self, level.player),1.0)",
+on_stretch:"play_sound__falloff('maggot-stretch', {max_volume: volume}) where volume = lib.math.constrain(0, 200.0/lib.math.length(self, level.player),1.0)",
 
 
 
@@ -159,7 +159,7 @@ object_type: {
 	},
 
 	on_process_on_back: "[set(rotate, slope_standing_on + 30*sin(10*cycle)*(1.0-decimal(_on_back_count)/on_back_duration)),proto_event('throwable_small_enemy', 'process_on_back')]",
-	on_end_on_back_anim: "[sound('maggot-distress'+1d4+'.wav'),proto_event('throwable_small_enemy', 'end_on_back_anim')]",
+	on_end_on_back_anim: "[play_sound__falloff('maggot-distress'),proto_event('throwable_small_enemy', 'end_on_back_anim')]",
 	animation: [
 		{
 			image: "enemies/maggot-white.png",
