--- a/data/object_prototypes/enemies_specialized/maggot_thrown.cfg
+++ b/data/object_prototypes/enemies_specialized/maggot_thrown.cfg
@@ -7,7 +7,7 @@
 	},
 
 	on_process_on_back: "[set(rotate, slope_standing_on + 30*sin(10*cycle)*(1.0-decimal(_on_back_count)/on_back_duration)),proto_event('throwable_small_enemy', 'process_on_back')]",
-	on_end_on_back_anim: "[sound('maggot-distress'+1d4+'.wav'),proto_event('throwable_small_enemy', 'end_on_back_anim')]",
+	on_end_on_back_anim: "[play_sound__falloff('maggot-distress'),proto_event('throwable_small_enemy', 'end_on_back_anim')]",
 	animation: [
 		{
 			image: "enemies/maggot-white.png",
