--- a/data/object_prototypes/general/switches_and_triggers/pullable_untracked.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/pullable_untracked.cfg
@@ -130,8 +130,8 @@ properties: {
 		/*
 			This is meant to be a cosmetic-only set of commands - it's everything related to the visual representation of the object when it's triggered on or off, but nothing related to broadcasting the signal, or changing the player state.
 		*/
-	visually_turn_on: "commands :: [sound('switch.wav'), set(animation, 'pushed')]",
-	visually_turn_off: "commands :: [sound('switch.wav'), set(animation, 'normal')]", 
+	visually_turn_on: "commands :: [play_sound__falloff('switch.wav'), set(animation, 'pushed')]",
+	visually_turn_off: "commands :: [play_sound__falloff('switch.wav'), set(animation, 'normal')]", 
 
 
 	last_toggled: { type: "int", default: -20 },
