--- a/data/objects/enemies/bugs/moth_bomber_bomb.cfg
+++ b/data/objects/enemies/bugs/moth_bomber_bomb.cfg
@@ -52,7 +52,7 @@
 	
 	on_die:  "[
 		spawn('explosion_big_harmful',midpoint_x,midpoint_y-32,facing),
-		sound('BombExplode.wav'),
+		play_sound__falloff('BombExplode.wav'),
 		stop_sound('fuse-long.ogg')
 	]",
 
