--- a/data/object_prototypes/general/switches_and_triggers/pressure_plate.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/pressure_plate.cfg
@@ -17,8 +17,8 @@ properties: {
 #-------------------------- pullable logic --------------------------#
 	objects_standing_on: { type: "[custom_obj]", default:[], persistent: false },
 
-	visually_turn_on: "[sound('click.wav'), set(animation, 'pushed')]",
-	visually_turn_off: "[sound('click.wav'), set(animation, 'normal')]",
+	visually_turn_on: "[play_sound__falloff('click.wav'), set(animation, 'pushed')]",
+	visually_turn_off: "[play_sound__falloff('click.wav'), set(animation, 'normal')]",
 	
 	set_event_to_false_upon_being_released: { type:"bool", default: false, editor_info: { type: "boolean", value: "false" } },
 },
