Overhauled the knockback system to key its cooldowns to the thing dealing the knockback, rather than the thing receiving it, because that's what's necessary for the one case we're using it in.  Fixed the rock_flying_harmful object's team.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -32,7 +32,7 @@ properties: {
 
 #--------------------------  vars --------------------------#
 	time_last_hit: { type: "int", default: 0, persistent: false },
-	time_last_knockbacked: { type: "int", default: 0, persistent: false },
+	time_last_knocked_something_back: { type: "int", default: 0, persistent: false },
 	attributes: { type: "{string->string}", default: {}, persistent: false }, 
 	is_a_boss: { type: "bool", default: false, persistent: true },
 	_preexisting_object: { type: "bool", default: false },
@@ -165,9 +165,9 @@ properties: {
 									)
 								]
 							),
-							if(collide_with.knockback_cooldown < (level.cycle - time_last_knockbacked), [
+							if(collide_with.knockback_cooldown < (level.cycle - collide_with.time_last_knocked_something_back), [
 								handle_knockback(collide_with),
-								set(time_last_knockbacked, level.cycle),
+								set(collide_with.time_last_knocked_something_back, level.cycle),
 							]),
 						])",
 						
