--- a/data/objects/effects/puffs/rock_flying_harmful.cfg
+++ b/data/objects/effects/puffs/rock_flying_harmful.cfg
@@ -7,16 +7,16 @@ activation_border: 1000,
 
 properties: {
 	dies_upon_dealing_damage: false,
-	team: "'enemy'",
+	team: "'evil'",
 	attack_damage: "lib.math.round(standard_thrown_damage*(3))",
-	attack_damage_to_player: 3,
+	attack_damage_to_player: "if(higher_difficulty, 2, 1)",
 	damage_type: "enum impact",
 	goes_through_enemy_shots: true,
 	damage_cooldown: "60",
-	knockback_cooldown: "50",
+	knockback_cooldown: "1000",
 	fraction_by_which_knockback_sources_itself_from_direction_of_impact_versus_momentum_of_aggressor: "1.0",
 
-	attack_knockback: "int :: 1600",
+	attack_knockback: "int :: 3200",
 
 
 
