--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -303,7 +303,7 @@ properties: {
 
 
 #---- lay egg ----#
-	should_lay_egg: "can_lay_egg_at_current_pos and (size(filter(level.chars, value.type in ['moth_boss.egg','moth_small'])) <= if(higher_difficulty, 6, 3))",
+	should_lay_egg: "can_lay_egg_at_current_pos and (size(filter(level.chars, value.type in ['moth_boss.egg','moth_small'])) <= 1)",
 	lay_egg: "[	
 		sound('moth-boss-lay-egg'+1d5+'.wav'), schedule(timeout/2, 
 			[spawn_egg(-300), spawn_egg(0), spawn_egg(300)],
