Fixed a typo; missing newline.

--- a/data/level/Seaside/grassy-path.cfg
+++ b/data/level/Seaside/grassy-path.cfg
@@ -193,7 +193,7 @@
 			"on_talk": "speech_dialog(	null,			[~Frogatto's world is a dangerous place.~],
 											[~In his travels, he'll encounter\\nmany creatures who want to hurt him.~],
 											set(level.player.animation, 'emote_confused'),
-											[~I mean, a ton of them. Like, 90% of living things on this island.~],
+											[~I mean, a ton of them.\\nLike, 90% of living things on this island.~],
 											[~It's often fine to just avoid them, but if you have\\nto fight, Frogatto's best defense is his tongue.~],
 											set(level.player.animation, 'emote_nod'),
 											[~You can grab enemies with the tongue,\\nand then spit them back out.~],
