Restored the regular attack modes to the moth boss, and gave him the regular hitpoint treatment.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -7,7 +7,7 @@ friction: 5000,
 traction: 1000,
 traction_in_air: 1000,
 has_feet: false,
-hitpoints: 3600,
+hitpoints: 100,
 
 solid_dimensions: ["enemy","common"],
 always_active: true,
@@ -52,7 +52,7 @@ properties: {
 	#-------------------------- general functions --------------------------#
 	setup: "[
 		
-			if(lower_difficulty, set(max_hitpoints, 2400)),
+			set_max_hitpoints({casual: standard_thrown_damage * 8, challenging: standard_thrown_damage * 16}),
 			setup_wind_gust_obj,
 		
 	]",	
@@ -70,7 +70,7 @@ properties: {
 						if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
 							if(_state != 'moving', enter_mode('moving',choose_target_pos),
 								if(should_lay_egg, enter_mode('egg-laying',lay_egg),
-									[switch(2, //_behavior_mode_prng.get_next_value, 
+									[switch(_behavior_mode_prng.get_next_value, 
 										0, enter_mode('shooting',prepare_shot),
 										1, enter_mode('shooting_homingshot',prepare_homing_shot),
 										2, enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
