Put the egg-laying mode at parity with the other modes, and made it only lay one egg.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -69,16 +69,23 @@ properties: {
 					if(_state = 'diving_towards_player', enter_mode('recover_from_dive', choose_dive_recovery_pos),
 						if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
 							if(_state != 'moving', enter_mode('moving',choose_target_pos),
-								if(should_lay_egg, enter_mode('egg-laying',lay_egg),
-									[switch(_behavior_mode_prng.get_next_value, 
-										0, enter_mode('shooting',prepare_shot),
-										1, enter_mode('shooting_homingshot',prepare_homing_shot),
-										2, enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
-										3, enter_mode('diving_towards_player', choose_dive_target_pos )
+								[
+									switch(_behavior_mode_prng.get_next_value, 
+										0,	enter_mode('shooting',prepare_shot),
+										1,	enter_mode('shooting_homingshot',prepare_homing_shot),
+										2,	enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
+										3,	enter_mode('diving_towards_player', choose_dive_target_pos ),
+										4,	if(should_lay_egg,
+												enter_mode('egg-laying',lay_egg),
+												enter_mode('shooting',prepare_shot)
+											),
 										),
 									_behavior_mode_prng.iterate_random_pool
-									]
-					))))])",
+								]
+							)
+						)
+					)
+					])",
 
 	choose_first_target_pos: "[ set(_target_x, (flight_bounds.x2 - flight_bounds.x)/2), set(_target_y, flight_bounds.y2)]",
 
@@ -306,7 +313,7 @@ properties: {
 	should_lay_egg: "can_lay_egg_at_current_pos and (size(filter(level.chars, value.type in ['moth_boss.egg','moth_small'])) <= 1)",
 	lay_egg: "[	
 		sound('moth-boss-lay-egg'+1d5+'.wav'), schedule(timeout/2, 
-			[spawn_egg(-300), spawn_egg(0), spawn_egg(300)],
+			[spawn_egg(50 - 1d50)],
 		),
 		schedule_next_action
 	] where spawn_egg = def(int vel_x) spawn('moth_boss.egg', mid_x, mid_y, {
@@ -373,7 +380,7 @@ properties: {
 	_state: { type: "string", default: 'moving', persistent: false },
 	behavior: "_state",
 	
-	_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:4, _pool_size_multiplier: 2})", persistent: false },
+	_behavior_mode_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:5, _pool_size_multiplier: 2})", persistent: false },
 	_flight_height_prng:	{ type: "class pseudo_random_numbers", init: "construct('pseudo_random_numbers',{_size_of_pool:2, _pool_size_multiplier: 2})", persistent: false },
 
 	flight_bounds: { type: "{ x: int, y: int, x2: int, y2: int }", dynamic_initialization: true },
