Fixed fish getting stuck in a wall

--- a/data/level/Forest/rustic-route.cfg
+++ b/data/level/Forest/rustic-route.cfg
@@ -26,12 +26,12 @@
 			"custom": true,
 			"label": "_17385c9a",
 			"property_data": {
-				"_desired_height": 654,
-				"_x2_bound": 654,
-				"_x_bound": 418
+				"_desired_height": 656,
+				"_x2_bound": 688,
+				"_x_bound": 354
 			},
 			"type": "fish_purple",
-			"x": 480,
+			"x": 416,
 			"y": 640
 		},
 		{
@@ -191,8 +191,8 @@
 			"face_right": false,
 			"label": "_d8d1945",
 			"type": "squirrel_black",
-			"x": 5411,
-			"y": 232
+			"x": 5440,
+			"y": 416
 		},
 		{
 			"_uuid": "fd216adb3af24ac093821ae869ce0491",
@@ -1314,23 +1314,6 @@
 	"serialized_objects": {
 		"character": [
 			{
-				"_uuid": "3bf4c46b3510496886e76db2efbd2096",
-				"activation_area": [2318,654,2705,1023],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"label": "_a14385",
-				"property_data": {
-					"_x2_bound": 2656,
-					"_x_bound": 2368,
-					"_y2_bound": 1024,
-					"_y_bound": 754
-				},
-				"type": "water_controller",
-				"x": 2496,
-				"y": 736
-			},
-			{
 				"_uuid": "292b1342906848aba122d25b0db47c77",
 				"activation_area": [-370,430,1073,1247],
 				"created": true,
@@ -1348,21 +1331,28 @@
 				"type": "water_controller",
 				"x": 64,
 				"y": 608
+			},
+			{
+				"_uuid": "3bf4c46b3510496886e76db2efbd2096",
+				"activation_area": [2318,654,2705,1023],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_a14385",
+				"property_data": {
+					"_x2_bound": 2656,
+					"_x_bound": 2368,
+					"_y2_bound": 1024,
+					"_y_bound": 754
+				},
+				"type": "water_controller",
+				"x": 2496,
+				"y": 736
 			}
 		]
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,lfs,lfs,lfs,lfs,lfs,lfs
 ,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,lfs,lfs,lfs,lfs,lfs,lfs
@@ -1454,7 +1444,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "wooden_bridge_tile_rear_parts"
+			"zorder": "player"
 		},
 		{
 			"tiles": ",
@@ -1492,16 +1482,6 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background_behind_trees"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
 		},
 		{
 			"tiles": ",,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
@@ -1702,47 +1682,7 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "mushrooms_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foliage_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "spikes_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "npcs"
+			"zorder": "player"
 		},
 		{
 			"tiles": "",
@@ -1874,26 +1814,6 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr
 			"y": -32,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Rustic Route",
