Fixed a typo on tempo village.  Fixed an issue where a 'too close to level edge' camera pan was bouncing off the level's edge.

--- a/data/level/Forest/tempo-village.cfg
+++ b/data/level/Forest/tempo-village.cfg
@@ -2009,7 +2009,7 @@
 								set(radelstad.animation, 'talk'),
 				radelstad,		[~Ahh, hello there?~],
 								set(level.player.animation, 'emote_nod'),
-				frogatto,		[~Hi, I'm frogatto.~],
+				frogatto,		[~Hi, I'm Frogatto.~],
 								set(radelstad.animation, 'talk'),
 				radelstad,		[~Please don't hate me.~],
 								set(frogatto.animation, 'emote_oh'),
