--- a/data/level/Forest/tempo-village.cfg
+++ b/data/level/Forest/tempo-village.cfg
@@ -2278,6 +2278,43 @@
 			"current_frame": "normal",
 			"custom": 1,
 			"label": "_16ebf244",
+			"on_talk": "speech_dialog(
+				self,			[~Good morning.~],
+				frogatto,		[~Um… hello there.~],
+				self,			[~Is everything all right?~],
+				frogatto,		[~What? Yeah. I'm… fine.~],
+				self,			[~You look like you’ve seen a ghost.~],
+			
+					/* If Frogatto was polite to Truggle */
+				frogatto,		[~Well, I'll be honest with you.~],
+								[~I made some judgments based on your appearance.~],
+								[~And then, when it turned out I was wrong,\\nI didn’t know how to react.~],
+				self,			[~…\nThis happens to me all the time.~],
+				frogatto,		[~That must be frustrating.~],
+				self,			[~It is. But I’m glad you gave me a chance.~],
+								[~Most people just keep their distance from me.~],
+				frogatto,		[~I'm sorry to hear that.~],
+								[~I'll be more careful not to assume\\nthings about people in the future.~],
+				self,			[~Thank you. Take care.~],
+
+					/* If Frogatto argued with Truggle */
+				frogatto,		[~Well, I imagine if I ever saw a ghost,\\nit would look like you.~],
+				self,			[~Wow. I can't believe I'm hearing this.~],
+				frogatto,		[~Oh, come on. This can't be the first time.~],
+								[~Have you never looked in the mirror?~],
+				self,			[~That's not why I'm surprised.~],
+								[~I heard what you said to Truggle over there.~],
+								[~You were in such a rush to\\ncall him out on his bigotry.~],
+								[~But I guess it's okay when <em>you</em> make\\nsnap judgments based on appearances.~],
+								[~And at least Truggle was correct!\\nYour reaction doesn't even make sense.~],
+								[~Why would a ghost be hanging out in\\na village in the middle of the day?~],
+								[~WEARING A SCARF?~],
+				frogatto,		[~You're right,\\nthat would be completely ridiculous.~],
+								[~I'm sorry.\\nI let my emotions take over and didn't think.~],
+				self,			[~It's okay.\\nJust be a little more sensitive in the future.~],
+				frogatto,		[~I will. Take care.~],
+
+					) where frogatto = level.player",
 			"type": "harstersham_npc",
 			"x": 576,
 			"y": 256
