Raw data entry for the ringlark conversation.

--- a/data/level/Forest/rocky-road-house-inside.cfg
+++ b/data/level/Forest/rocky-road-house-inside.cfg
@@ -9,8 +9,36 @@
 			"face_right": false,
 			"label": "_e0bb885",
 			"on_talk": "speech_dialog(self, [~Hello there.~],
-						   level.player, [~You don't have real dialogue yet, huh?~],
-						   self,         [~No, sir, this is a placeholder.~])",
+
+						   frogatto,	[~Wow. You look magical.~],
+						   self,		[~Uh… thanks?~],
+						   frogatto,	[~If I catch you, do you have to grant me a wish?~],
+						   self,		[~Did that seriously just fall out of your mouth?~],
+						   frogatto,	[~Sorry, I was just-~],
+						   self,		[~No, no, let's really explore this here.~],
+						   				[~So you think that I get bound to\\nanyone who walks up and grabs me…~],
+						   frogatto,	[~…yes…~],
+						   self,		[~…and I just live in this village here?\\nWith a few dozen neighbors?~],
+						   frogatto,	[~Sure, why not?~],
+						   self,		[~Neighbors who would never stop trying to catch me?~],
+						   frogatto,	[~I dunno. Maybe you're really fast?~],
+						   self,		[~Fast, and tired from always\\nneeding to look over my shoulder?~],
+						   				[~Lest I get manhandled\\nby every boob who comes walking by?~],
+						   frogatto,	[~Or maybe there's a limit of one wish per person?~],
+						   self,		[~Okay. So you think everyone in town caught me once…~],
+						   				[~…and now I can relax because\\nthey have no reason to keep trying?~],
+						   frogatto,	[~Seems plausible.~],
+						   self,		[~Have you seen some of\\nthe goobers that live in this area?~],
+						   self,		[~Did you catch that guy\\nwith the sweet new motorcycle?~],
+						   frogatto,	[~No…~],
+						   self,		[~Have you seen the gal\\nwith the collection of long-lost art?~],
+						   frogatto,	[~I have not.~],
+						   self,		[~Did Truggle tell you about their business venture\\nthat's taken the world by storm?~],
+						   frogatto,	[~Not as of yet.~],
+						   self,		[~Huh. It's almost as if they've\\nnever been granted any wishes before.~],
+						   frogatto,	[~Okay, okay. I'll see myself out.~],
+
+			) where frogatto = level.player",
 			"type": "ringlark_npc",
 			"x": -256,
 			"y": 93
