Fixed a bunch of serialization issues on the gazer boss components.

--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -725,7 +725,11 @@ properties: {
 
 						
 							
-	manifold_obj: { type: "obj gazer_boss_manifold", init: "object('gazer_boss_manifold', mid_x, mid_y, {parent: me, time_to_die: 1} )" },
+	manifold_obj: {
+		type: "obj gazer_boss_manifold",
+		init: "object('gazer_boss_manifold', mid_x, mid_y, {parent: me, time_to_die: 1} )",
+		persistent: false,
+	},
 	manifold_glow_obj: {
 		type: "obj effects_attache_glow_source",
 		init: "object(
@@ -743,7 +747,7 @@ properties: {
 			//custom_relative_pos_default: {mid_x: bloom_offset.x, mid_y: bloom_offset.y},
 			zorder: 50,
 		})",
-		
+		persistent: false,
 	},
 
 								
@@ -865,11 +869,23 @@ properties: {
 	
 
 #-------------------------- attaches --------------------------#
-	_spiral_attack_sound_loop: { type: "obj sound_source_individual_attache", init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'gazer-spin-loop.wav', starts_with_sound_on: false})" },
+	_spiral_attack_sound_loop: {
+		type: "obj sound_source_individual_attache",
+		init: "object('sound_source_individual_attache', mid_x, mid_y, {parent: me, sound_file:'gazer-spin-loop.wav', starts_with_sound_on: false})",
+		persistent: false,
+	},
 
-	_laser_charge_bloom: { type: "obj gazer_boss.laser_chargeup_bloom", init: "object('gazer_boss.laser_chargeup_bloom', mid_x, mid_y, {facing: facing, parent: me, time_to_die: 0})" },
+	_laser_charge_bloom: {
+		type: "obj gazer_boss.laser_chargeup_bloom",
+		init: "object('gazer_boss.laser_chargeup_bloom', mid_x, mid_y, {facing: facing, parent: me, time_to_die: 0})",
+		persistent: false,
+	},
 
-	_laser_beam: { type: "obj gazer_boss.beam", init: "object('gazer_boss.beam', mid_x, mid_y, {parent: me, time_to_die: 1})" },
+	_laser_beam: {
+		type: "obj gazer_boss.beam",
+		init: "object('gazer_boss.beam', mid_x, mid_y, {parent: me, time_to_die: 1})",
+		persistent: false,
+	},
 
 #-------------------------- vars --------------------------#
 	_original_boss_position: { type: "Point2d", init: "[0,0]" },
@@ -981,8 +997,16 @@ object_type: [
 								
 
 
-			_beam_damage_provider: { type: "obj damage_beam_attache", init: "object('damage_beam_attache', mid_x, mid_y, {parent: me.parent, relative_x: 0, relative_y: 0})" },
-			_beam_root: { type: "obj gazer_boss.beam_root", init: "object('gazer_boss.beam_root', mid_x, mid_y, {parent: me.parent, relative_x: 0, relative_y: 0})" },
+			_beam_damage_provider: {
+				type: "obj damage_beam_attache",
+				init: "object('damage_beam_attache', mid_x, mid_y, {parent: me.parent, relative_x: 0, relative_y: 0})",
+				persistent: false,
+			},
+			_beam_root: {
+				type: "obj gazer_boss.beam_root",
+				init: "object('gazer_boss.beam_root', mid_x, mid_y, {parent: me.parent, relative_x: 0, relative_y: 0})",
+				persistent: false,
+			},
 			_glow: {
 				type: "obj effects_attache_glow_source",
 				init: "object('effects_attache_glow_source', mid_x, mid_y, {
@@ -994,6 +1018,7 @@ object_type: [
 								base_alpha: 180,
 								zorder: 50,
 							})",
+				persistent: false,
 			},
 
 			#-------------------------- effects_attache overrides --------------------------#
